--- a/basic-hibernate/pom.xml
+++ b/basic-hibernate/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jontian</groupId>
-    <artifactId>hibernate</artifactId>
+    <artifactId>basic-hibernate</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
