--- a/basic-hibernate/src/main/resources/application.properties
+++ b/basic-hibernate/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.platform=h2
 
+logging.level.root = warn
 logging.level.org.hibernate.SQL = debug
