add new project, and refactor code.

--- a/intermediate-hibernate/pom.xml
+++ b/intermediate-hibernate/pom.xml
@@ -6,7 +6,9 @@
 
     <groupId>com.jontian</groupId>
     <artifactId>intermediate-hibernate</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
