--- a/basic-hibernate/pom.xml
+++ b/basic-hibernate/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>com.jontian</groupId>
     <artifactId>basic-hibernate</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
