--- a/intermediate-hibernate/pom.xml
+++ b/intermediate-hibernate/pom.xml
@@ -15,7 +15,10 @@
         <version>1.5.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
