--- a/intermediate-hibernate-2/pom.xml
+++ b/intermediate-hibernate-2/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jontian</groupId>
-    <artifactId>intermediate-hibernate</artifactId>
+    <artifactId>intermediate-hibernate-2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     
